# uon_work_interface

./: .gitignore  Pipfile  request_test.py  widget.py
attendance_widget_app/: app_settings.py  main.py
attendance_widget_app/deploy/: README.md
attendance_widget_app/deploy/ubuntu/: README.txt  build.sh
attendance_widget_app/src/attendance_widget/: automation.py  calculations.py  chat.py  main.py  models.py  ui.py
attendance_widget_app/tools/: sync_assets.py
attendance_widget_release/ubuntu/: AttendanceWidget.desktop  README.txt  build_ubuntu_binary.sh  run_attendance_widget.sh
attendance_widget_release/ubuntu/app/: .env.example  README.md  pyproject.toml
attendance_widget_release/ubuntu/app/src/attendance_widget/: automation.py  config.py
attendance_widget_release/windows/: AttendanceWidget.bat  README.txt
attendance_widget_release/windows/app/src/attendance_widget/: __init__.py  calculations.py  ui.py
crolling_test/: Pipfile  test.py
work_script/: Get_work_in_out_time.py  work_in_script.sh  work_out.py  work_out_script.sh
